# picknik

./: .gitignore  BAXTER.md  INSTALL.md  README.md  debug_usb.sh  git_pull_all_repos.sh  perception_install.sh  rosconsole.yaml
baxter_apc_main/: CMakeLists.txt  package.xml
baxter_apc_main/config/: amazon_shelf.yaml
baxter_apc_main/docs/: IndustrialArm.md  apc_picknik_pipeline.odg
baxter_apc_main/include/baxter_apc_main/: amazon_json_parser.h  apc_manager.h  learning_pipeline.h  manipulation_pipeline.h  namespaces.h  shelf.h  visuals.h
baxter_apc_main/launch/: apc_manager.launch  debug_settings.gdb  mesh_publisher_rviz.launch  moveit.rviz  moveit_display.rviz  moveit_display_rviz.launch  moveit_rviz.launch
baxter_apc_main/meshes/champion_copper_plus_spark_plug/: recommended.dae
baxter_apc_main/meshes/crayola_64_ct/: recommended.dae
baxter_apc_main/meshes/dove_beauty_bar/: recommended.dae
baxter_apc_main/meshes/elmers_washable_no_run_school_glue/: recommended.dae
baxter_apc_main/meshes/expo_dry_erase_board_eraser/: recommended.stl
baxter_apc_main/meshes/kong_duck_dog_toy/: collision.stl
baxter_apc_main/meshes/kong_sitting_frog_dog_toy/: recommended.dae  recommended.stl
baxter_apc_main/meshes/kygen_squeakin_eggs_plush_puppies/: recommended.dae  recommended.stl
baxter_apc_main/meshes/mark_twain_huckleberry_finn/: collision.stl
baxter_apc_main/meshes/munchkin_white_hot_duck_bath_toy/: recommended.stl
baxter_apc_main/meshes/one_with_nature_soap_dead_sea_mud/: collision.stl
baxter_apc_main/meshes/paper_mate_12_count_mirado_black_warrior/: collision.stl  recommended.dae
baxter_apc_main/meshes/rollodex_mesh_collection_jumbo_pencil_cup/: recommended.stl
baxter_apc_main/meshes/safety_works_safety_glasses/: recommended.dae
baxter_apc_main/orders/: example.json  random_orders.py  simple.json  sort_order.py  super_simple.json
baxter_apc_main/src/: amazon_json_parser.cpp  apc_manager.cpp  learning_pipeline.cpp  main.cpp  manipulation_pipeline.cpp  shelf.cpp
baxter_apc_main/tests/: mesh_publisher.cpp
cad/: bin.SLDPRT
moveit_arpg_perception/: CMakeLists.txt  README.md  package.xml
moveit_arpg_perception/launch/: object_recognition.launch
moveit_arpg_perception/msgs/: findObject.proto  findObject.proto~
moveit_arpg_perception/src/: object_recognition_server.cpp
moveit_arpg_perception/tests/: fakeDDTR.cpp  fakeDDTR.cpp~
picknik_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
picknik_gui/scripts/: send_test_msgs.py
picknik_gui/src/: drive_widget.cpp  drive_widget.h  flag.h  imu_display.cpp  imu_display.h  imu_visual.cpp  imu_visual.h  picknik_panel.cpp  picknik_panel.h  plant_flag_tool.cpp  plant_flag_tool.h
picknik_main/: CMakeLists.txt  package.xml
picknik_main/config/: amazon_shelf.yaml  apc_baxter.yaml  apc_configuration.yaml  apc_jacob.yaml  baxter.yaml  baxter_apc.yaml  jaco.yaml  jaco_apc.yaml  jacob_apc.yaml  moveit_ompl.yaml  picknik_debug_level.yaml  picknik_r3.yaml
picknik_main/docs/: IndustrialArm.md  apc_picknik_pipeline.odg
picknik_main/launch/: baxter_apc.launch  baxter_rviz.launch  camera_calibration.launch  debug_settings.gdb  fake_perception_server.launch  jaco_apc.launch  jaco_apc_demo.launch  jaco_helpers.launch  jacob_apc.launch  jacob_apc_demo.launch  jacob_helpers.launch  jacob_rviz.launch  mesh_publisher.rviz  mesh_publisher_rviz.launch  moveit.rviz  moveit_display.rviz  moveit_display_rviz.launch  moveit_rviz.launch  r3_apc.launch  r3_pick.launch  r3_rviz.launch  rviz.launch  rviz_display.launch
picknik_main/orders/: 1.json  2.json  3.json  4.json  cheezits.json  crayola.json  expo.json  items_data.csv  observation.json  random.json  random_orders.py  simple.json  single_row.json  sort_order.py  sorted_order_from_example.json  super_simple.json
picknik_main/src/: amazon_json_parser.cpp  apc_manager.cpp  collision_object.cpp  execution_interface.cpp  fake_perception_server.cpp  fix_state_bounds.cpp  learning_pipeline.cpp  line_tracking.cpp  main.cpp  main2.cpp  manipulation.cpp  manipulation_data.cpp  manipulation_pipeline.cpp  perception_interface.cpp  perception_layer.cpp  pick_manager.cpp  picknik_main.cpp  planning_scene_manager.cpp  planning_scene_switcher.cpp  product_simulator.cpp  remote_control.cpp  shelf.cpp  tactile_feedback.cpp  trajectory_io.cpp  visuals.cpp
picknik_main/tests/: mesh_publisher.cpp  run_in_loop.sh  simple_test.cpp
picknik_main/trajectories/: analyze_trajectory.m  analyze_trajectory.m~  observe_bin_bin_D_trajectory.csv  trajectory.csv
picknik_msgs/: CMakeLists.txt  package.xml
picknik_msgs/action/: CalibrateShelf.action  FindObjects.action
picknik_msgs/msg/: FoundObject.msg  PickNikDashboard.msg
picknik_msgs/srv/: StopPerception.srv
picknik_perception/: CMakeLists.txt  README.md  calibrationNotes.md  camera_transform.txt  package.xml
picknik_perception/config/: dave_test_tf_keyboard.yaml  pcl_perception_server.yaml  tf_keyboard.yaml  tf_keyboard.yaml.computer_vision  tf_keyboard_hack_offset.yaml  tf_keyboard_hack_offset.yaml.original  tf_kinect_left.yaml  tf_kinect_right.yaml  tf_xtion_left.yaml  tf_xtion_right.yaml
picknik_perception/data/: test.ply
picknik_perception/launch/: dave_test_tf_keyboard.launch  fake_perception_server.launch  multi_kinect.launch  multi_xtion.launch  multi_xtion_calibrate.launch  multi_xtion_calibrate_each.launch  pcl_perception_server.launch  perception_server_ddtr.launch  perception_server_ddtr_calibrate.launch  perception_server_fake.launch  perception_server_pcl.launch  rviz.launch  shape_filter.launch  simple_point_cloud_filter.launch  static_calibration_xtion.launch  tf_keyboard.launch
picknik_perception/scripts/: perception_server_ddtr  perception_server_ddtr_calibrate
picknik_perception/src/: align_point_clouds.cpp  bounding_box.cpp  cloud_preprocessor.cpp  fake_perception_server.cpp  manipulation_interface.cpp  manual_tf_alignment.cpp  merge_point_clouds.cpp  pcl_perception_server.cpp  point_cloud_filter.cpp  shape_filter.cpp  simple_perception_server.cpp  simple_point_cloud_filter.cpp
(+157 files in other folders)
