<?xml version="1.0"?>
<package>
  <name>moveit_arpg_perception</name>
  <version>0.0.1</version>
  <description>Interface between the Autonomous Robotics and Perception Group at CU Boulder and MoveIt!</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_arpg_perception</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_arpg_perception/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_arpg_perception/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>object_recognition_msgs</build_depend>

  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>object_recognition_msgs</run_depend>

  <export>
  </export>
</package>
