<package>
  <name>picknik_gui</name>
  <version>0.9.1</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/picknik_gui</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>picknik_msgs</build_depend>
  <build_depend>dashboard_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>picknik_msgs</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
