<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>picknik_perception</name>

  <version>0.1.0</version>

  <description>Perception of a shelf yo</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/cu_amazon</url>
  <url type="butracker">https://github.com/davetcoleman/cu_amazon/issues</url>
  <url type="repository">https://github.com/davetcoleman/cu_amazon/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>picknik_msgs</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>bounding_box</build_depend>

  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>picknik_msgs</run_depend>
  <run_depend>bounding_box</run_depend>
  <run_depend>openni_launch</run_depend>

</package>
